# elderephemera.github.io

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE  Makefile  about.html  archive.html  contact.html  default.nix  index.html  package.yaml  projects.html  shell.nix  site.hs  whistlepayer-github-io.cabal
.circleci/: config.yml
.github/workflows/: publish.yml
about/: index.html
builder/: Main.hs  Style.hs  build-site.cabal  build-site.hs  default.nix  elderephemera-github-io.cabal
css/: fifthave.css  style.css
four/: out.frefs.js  out.frefs.json  out.stats
nix/: pinned-nixpkgs.nix
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  how-many-chars-hs.md  modernizing-haskell.lhs  parsec-shmup.md  projects.md
posts/how-many-chars-hs/: index.html
posts/modernizing-haskell/: index.html
posts/parsec-shmup/: index.html
posts/projects/: index.html
projects/: amigalite-ark.nix  default.nix  four.nix  index.html  memorys-journey.nix  recipe-bookmarks.nix
projects/amigalite-ark/: amigalite-ark.js  amigalite-ark.wasm  assets.bobber.glb.data  assets.bobber.glb.js  assets.canvas.glb.data  assets.canvas.glb.js  assets.cd.glb.data  assets.cd.glb.js  assets.controls.key_a.gif.data  assets.controls.key_a.gif.js  assets.controls.key_d.gif.data  assets.controls.key_d.gif.js  assets.controls.key_down.gif.data  assets.controls.key_down.gif.js  assets.controls.key_e.gif.data  assets.controls.key_e.gif.js  assets.controls.key_enter.gif.data  assets.controls.key_enter.gif.js  assets.controls.key_h.gif.data  assets.controls.key_h.gif.js  assets.controls.key_q.gif.data  assets.controls.key_q.gif.js  assets.controls.key_s.gif.data  assets.controls.key_s.gif.js  assets.controls.key_space.gif.data  assets.controls.key_space.gif.js  assets.controls.key_up.gif.data  assets.controls.key_up.gif.js  assets.controls.key_w.gif.data  assets.controls.key_w.gif.js  assets.controls.mouse_0.png.js  assets.controls.mouse_1.png.js  assets.controls.mouse_2.png.js  assets.easel.glb.data  assets.easel.glb.js  assets.exclamation.glb.data  assets.exclamation.glb.js  assets.exclamation.jpg.data  assets.exclamation.jpg.js  assets.font.ttf.data  (+177 more)
projects/memorys-journey/: index.html  script.js  style.css
projects/recipe-bookmarks/: index.html  script.js  style.css
syntax/: console.xml  plain.xml
templates/: default.html  post-list.html
