cabal-version: 1.12

name:           build-site
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
build-type:     Simple

executable build-site
  main-is: Main.hs
  other-modules: Style
  build-depends:
    aeson >= 1.5.6 && < 1.6,
    base >= 4.14.1 && < 4.15,
    bytestring >= 0.10.12 && < 0.11,
    clay >= 0.13.3 && < 0.14,
    filepath >= 1.4.2 && < 1.5,
    hakyll >= 4.14.0 && < 4.15,
    text >= 1.2.4 && < 1.3,
    unordered-containers >= 0.2.13 && < 0.3
  default-language: Haskell2010
  default-extensions: OverloadedStrings ImportQualifiedPost
  ghc-options: -Wall
