cabal-version: 1.12

name:           build-site
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
build-type:     Simple

executable build-site
  main-is: Main.hs
  other-modules: Style
  build-depends:
    aeson >= 2.0.3 && < 2.1,
    base >= 4.15.1 && < 4.16,
    bytestring >= 0.10.12 && < 0.11,
    clay >= 0.14.0 && < 0.15,
    filepath >= 1.4.2 && < 1.5,
    hakyll >= 4.15.1 && < 4.16,
    pandoc >= 2.17.1 && < 2.18,
    skylighting >= 0.12.3 && < 0.13,
    text >= 1.2.5 && < 1.3
  default-language: Haskell2010
  default-extensions: OverloadedStrings ImportQualifiedPost
  ghc-options: -Wall
