cabal-version: 1.12

name:           build-site
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
build-type:     Simple

executable build-site
  main-is: Main.hs
  other-modules: Style
  build-depends:
    aeson >= 2.1.2 && < 2.2,
    base >= 4.18.2 && < 4.19,
    bytestring >= 0.11.5 && < 0.12,
    clay >= 0.14.0 && < 0.15,
    filepath >= 1.4.300 && < 1.5,
    hakyll >= 4.16.2 && < 4.17,
    latex-svg-hakyll >= 0.2 && < 0.3,
    latex-svg-image >= 0.2 && < 0.3,
    latex-svg-pandoc >= 0.2.1 && < 0.3,
    pandoc >= 3.1.11 && < 3.2,
    skylighting >= 0.14.1 && < 0.15,
    text >= 2.0.2 && < 2.1
  default-language: Haskell2010
  default-extensions: OverloadedStrings ImportQualifiedPost
  ghc-options: -Wall
